@@ -12,6 +12,7 @@ R0.3.0  M. Dunning - 2021-04-14
     - Set all channels/params to invalid severity when there is a communication error
     - Clean up source code formatting; remove unused parameters
     - Use new asynPortDriver constructor which doesn't need the parameter list length
+    - Remove functionality to read/write arbitrary memory address.  This is not needed.
     - New coupler db files.  Old versions are retained for compatibility, but new versions
             are cleaner and have more intuitive PV names.
 
